k8-project/codex-tutor/order/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingressrules
spec:
  rules:
    - host: orders.example.com
      http:
        paths:
          - backend:
              service:
                name: order-service
                port:
                  number: 80
            pathType: Prefix
            path: /
